# xarray-safe-rcm

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml  upstream-dev.yaml
ci/: install-upstream-dev.sh
ci/requirements/: docs.yaml  environment.yaml
docs/: conf.py
safe_rcm/: __init__.py  api.py  calibrations.py  fs_utils.py  manifest.py  schema.py  urls.py  xml.py
safe_rcm/product/: converters.py  dicttoolz.py  predicates.py  reader.py  transformers.py  utils.py
safe_rcm/tests/: test_product_utils.py  test_xml.py
