[project]
name = "xarray-safe-rcm"
requires-python = ">= 3.10"
license = { text = "MIT" }
description = "xarray reader for radarsat constellation mission (RCM) SAFE files"
readme = "README.md"
dependencies = [
  "toolz",
  "numpy",
  "xarray",
  "lxml",
  "xmlschema",
  "rioxarray",
  "fsspec",
  "pandas",
  "exceptiongroup; python_version < '3.11'",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
  "safe_rcm",
  "safe_rcm.*",
]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.ruff]
target-version = "py310"
builtins = ["ellipsis"]
exclude = [".git", ".eggs", "build", "dist", "__pycache__"]
line-length = 100

[tool.ruff.lint]
ignore = [
  "E402",  # module level import not at top of file
  "E501",  # line too long - let black worry about that
  "E731",  # do not assign a lambda expression, use a def
  "UP038", # type union instead of tuple for isinstance etc
]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "I",   # isort
  "UP",  # Pyupgrade
  "TID", # flake8-tidy-imports
  "W",
]
extend-safe-fixes = [
  "TID252", # absolute imports
  "UP031",  # percent string interpolation
]
fixable = ["I", "TID252", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["safe_rcm"]
known-third-party = ["xarray", "tlz"]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.coverage.run]
source = ["safe_rcm"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
